init-con.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myinit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: myvol
        emptyDir: {}
