node-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypodnodename
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  nodeName: node3
