taint-tol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taintpod
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  tolerations:
  - key: color
    operator: Equal
    value: green
    effect: NoExecute
