taint-tol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taintpod
  labels:
    app: myapp
spec:
  containers:
  - name: con1
    image: nginx:latest
    ports:
    - containerPort: 80
  tolerations:
  - key: node-role.kubernetes.io/control-plane
    operator: Equal
#    value:
    effect: NoSchedule

      #      node-role.kubernetes.io/control-plane:NoSchedule
