liveness-tcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydep
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx:latest
        ports:
        - containerPort: 80
        livenessProbe:
           tcpSocket:
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  selector:
    app: mymydep
  ports:
  - port: 80
    targetPort: 80
