ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing
spec:
  tls:
  - hosts:
      - abc.com
    secretName: app
  ingressClassName: nginx 
  rules:
  - host: "abc.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mango
            port:
              number: 80
